--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "ts-node-dev": "^2.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.2"
   }
 }
