--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "1.6.7",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "1.6.7"
+    "sass": "^1.89.2"
   },
   "devDependencies": {
-    "typescript": "5.4.2",
+    "@types/node": "20.11.30",
     "@types/react": "18.2.62",
-    "@types/node": "20.11.30"
+    "typescript": "5.4.2"
   }
 }
