--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@vitest/coverage-v8": "^3.2.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2",
     "vitest": "^3.2.4"
