--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.0.2",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
